--- a/index.html
+++ b/index.html
@@ -1,101 +1,3 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sahab's Blog</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        nav {
-            background: #444;
-            padding: 0.5rem 0;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 1rem;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        main {
-            max-width: 800px;
-            margin: 2rem auto;
-            padding: 1rem;
-            background: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-        article {
-            margin-bottom: 2rem;
-        }
-        article h2 {
-            margin-top: 0;
-            color: #555;
-        }
-        article p {
-            line-height: 1.6;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background: #333;
-            color: #fff;
-            margin-top: 2rem;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Welcome to Sahab's Blog</h1>
-    </header>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#posts">Posts</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! I'm Sahab, and this is my personal blog where I share thoughts, stories, and insights on topics I'm passionate about. Stay a while and explore!</p>
-        </section>
-        <section id="posts">
-            <h2>Recent Posts</h2>
-            <article>
-                <h3>Blog Post Title 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel nisi non nulla luctus pretium.</p>
-                <a href="#">Read more...</a>
-            </article>
-            <article>
-                <h3>Blog Post Title 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel nisi non nulla luctus pretium.</p>
-                <a href="#">Read more...</a>
-            </article>
-        </section>
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>If you’d like to get in touch, feel free to email me at <a href="mailto:sahab@example.com">sahab@example.com</a>.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 Sahab's Blog. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+<DIV>
+    FIDIIIIIII
+</DIV>
