--- a/index.html
+++ b/index.html
@@ -1,3 +1,42 @@
-<DIV>
-    FIDIIIIIII
-</DIV>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>shadows blog</title>
+  </head>
+  <body style="background-color:red;">
+
+    <h1> My blog is amazing </h1>
+    <p>Hi, welcome to Eesa's blog🙃</p>
+
+    <div style="background-color:blue;">
+      <h2>My favourite movie  is Sonic3 and there is more coming out. i am so exited.</h2>
+      <img src="shadow2.jpg"  width="900" height="500">
+    </div>
+
+<div>
+    <img src="shadow.jpg"  width="900" height="500">
+<h1>i am so exited for the next Movie!</h1>
+  <h1>Sonic 4</h4>
+<h1>do you even know how i am doing this? i am coding.</h1>
+<h1>and you can do that too. you can make whatever you want</h1>
+<h1>but it's hard to know what to type tho</h1>
+<h1>oh i just love making this</h1>
+<h1>i forgot to mention something tho i am a kid</h1>
+<h1>i am only 7 years old and i am doing this</h1>
+<img src="shadow3.jpg"  width="900" height="500">
+<h1>i think you know my favorite color</h1>
+<h1>yup red</h1>
+<h1>and character</h1>
+<h1>yup shadow</h1>
+<img src="shadow4.jpg"  width="900" height="500">
+<h1>i would say this image looks the best</h1>
+<h1>yeah i would say this image looks the best</h1>
+<h1>i should make more</h1>
+<h1>yeah but um where were we?</h1>
+<h1>oh yes favorite color and charcter</h1>
+<h1>no wait we already did that so that means we're on nothing</h1>
+<h1>what should we do next</h1>
+<h1>maybe learn about the're abilities</h1>
+<h1> yeah we should do that</h1>
+<h1> shadows powers well he has lots of powers</h1>
