--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   </head>
   <body style="background-color:red;">
 
-    <h1> My blog is amazing </h1>
-    <p>Hi, welcome to Eesa's blog🙃</p>
+    <h1> Hi My name is Eesa </h1>
+    <img src=Eesa.png></img>
+    <h1>Welcome to my amazing blog🙃</p>
 
     <div style="background-color:blue;">
       <h2>My favourite movie  is Sonic3 and there is more coming out. i am so exited.</h2>
