--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body style="background-color:red;">
 
     <h1> Hi My name is Eesa </h1>
-    <img src=Eesa.png></img>
+    <img src=Eesa.png>
     <h1>Welcome to my amazing blog🙃</p>
 
     <div style="background-color:blue;">
