--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <div style="background-color:blue;">
       <h2>My favourite movie  is Sonic3 and there is more coming out. i am so exited.</h2>
-      <img src="image/shadow2.jpg"  width="900" height="500">
+      <img src="shadow2.jpg"  width="900" height="500">
     </div>
 
 
   <h1>  <a href= "https://www.google.com/"> google searching </a></h1>
 
 <div>
-    <img src="image/shadow.jpg"  width="900" height="500">
+    <img src="shadow.jpg"  width="900" height="500">
 <h1>i am so exited for the next Movie!</h1>
   <h1>Sonic 4</h4>
 <h1>do you even know how i am doing this? i am coding.</h1>
@@ -28,12 +28,12 @@
 <h1>oh i just love making this</h1>
 <h1>i forgot to mention something tho i am a kid</h1>
 <h1>i am only 7 years old and i am doing this</h1>
-<img src="image/shadow3.jpg"  width="900" height="500">
+<img src="shadow3.jpg"  width="900" height="500">
 <h1>i think you know my favorite color</h1>
 <h1>yup red</h1>
 <h1>and character</h1>
 <h1>yup shadow</h1>
-<img src="image/shadow4.jpg"  width="900" height="500">
+<img src="shadow4.jpg"  width="900" height="500">
 <h1>i would say this image looks the best</h1>
 <h1>yeah i would say this image looks the best</h1>
 <h1>i should make more</h1>
