--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1> My blog is amazing </h1>
     <p>Hi, welcome to Eesa's blog🙃</p>
 
+    <img src="Eesa.png" width="400" height="400">
+
     <div style="background-color:blue;">
       <h2>My favourite movie  is Sonic3 and there is more coming out. i am so exited.</h2>
       <img src="shadow2.jpg"  width="900" height="500">
