shadow the hedgehog

--- a/index.html
+++ b/index.html
@@ -46,3 +46,4 @@
 <h1>maybe learn about the're abilities</h1>
 <h1> yeah we should do that</h1>
 <h1> shadows powers well he has lots of powers</h1>
+<h1>he has teleporting</h1>
