--- a/index.html
+++ b/index.html
@@ -47,3 +47,4 @@
 <h1> yeah we should do that</h1>
 <h1> shadows powers well he has lots of powers</h1>
 <h1>he has teleporting</h1>
+<h1>and electricity</h1>
