--- a/index.html
+++ b/index.html
@@ -48,3 +48,4 @@
 <h1> shadows powers well he has lots of powers</h1>
 <h1>he has teleporting</h1>
 <h1>and electricity</h1>
+<img src="shadow4.jpg"  width="900" height="500"
