--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
 <img src="shadow4.jpg"  width="900" height="500">
 <img src="shadow5.jpg"  width="900" height="500">
 <img src="shadow.gif"  width="900" height="500">
-<h1>no this super shadow looks the best</h1>
+<h1>no this shadow looks the best</h1>
 <h1>like this blog and comment bello if you agree</h1>
 <h1>🤔hmmmmmmmmmmm i should add more</h1>
