--- a/index.html
+++ b/index.html
@@ -58,3 +58,4 @@
 <h1>now that is shadow with electricity and teleportation</h1>
 <img src="shadow6.jpg"  width="900" height="500">
 <h1>now that is what i call my website<h1>
+<img src="shadow7.jpg"  width="900" height="500">
