--- a/index.html
+++ b/index.html
@@ -59,3 +59,4 @@
 <img src="shadow6.jpg"  width="900" height="500">
 <h1>now that is what i call my website<h1>
 <img src="shadow7.jpg"  width="900" height="500">
+<img src="shadow8.jpg"  width="900" height="500">
