--- a/index.html
+++ b/index.html
@@ -61,3 +61,4 @@
 <img src="shadow7.jpg"  width="900" height="500">
 <img src="shadow8.jpg"  width="900" height="900">
 <h1> those are the actors. Keanu Reeves and Ben Schwartz
+<h1> Ben Schwartz is 43 years old and Keanu Reeves is 60</h1>
