--- a/index.html
+++ b/index.html
@@ -62,3 +62,4 @@
 <img src="shadow8.jpg"  width="900" height="900">
 <h1> those are the actors. Keanu Reeves and Ben Schwartz
 <h1> Ben Schwartz is 43 years old and Keanu Reeves is 60</h1>
+<img src="shadow.gif"  width="900" height="500">
