--- a/index.html
+++ b/index.html
@@ -63,3 +63,4 @@
 <h1> those are the actors. Keanu Reeves and Ben Schwartz
 <h1> Ben Schwartz is 43 years old and Keanu Reeves is 60</h1>
 <img src="shadow.gif"  width="900" height="500">
+<h1>now we're gettin' some image</h1>
