--- a/index.html
+++ b/index.html
@@ -64,3 +64,4 @@
 <h1> Ben Schwartz is 43 years old and Keanu Reeves is 60</h1>
 <img src="shadow.gif"  width="900" height="500">
 <h1>now we're gettin' some image</h1>
+<img src="shadow9.jpg"  width="900" height="500">
