dddfhhg vjrjjjnm hntjdn

--- a/index.html
+++ b/index.html
@@ -65,3 +65,4 @@
 <img src="shadow.gif"  width="900" height="500">
 <h1>now we're gettin' some image</h1>
 <img src="shadow9.jpg"  width="900" height="500">
+<img src="shadow10.jpg"  width="900" height="500">
