i love my mom and dad and sister and self

--- a/index.html
+++ b/index.html
@@ -67,3 +67,4 @@
 <img src="shadow9.jpg"  width="900" height="500">
 <img src="shadow2.gif"  width="900" height="700">
 <img src="shadow.gif" width="900" height="500">
+<img src="shadow3.gif" width="900" height="500">
