--- a/index.html
+++ b/index.html
@@ -68,3 +68,4 @@
 <img src="shadow2.gif"  width="900" height="700">
 <img src="shadow.gif" width="900" height="500">
 <img src="shadow3.gif" width="900" height="500">
+<img src="shadow4.gif" width="900" height="500">
