--- a/index.html
+++ b/index.html
@@ -69,3 +69,4 @@
 <img src="shadow.gif" width="900" height="500">
 <img src="shadow3.gif" width="900" height="500">
 <img src="shadow4.gif" width="900" height="500">
+<img src="shadow5.gif" width="900" height="500">
