--- a/index.html
+++ b/index.html
@@ -71,3 +71,4 @@
 <img src="shadow4.gif" width="900" height="500">
 <img src="shadow5.gif" width="900" height="500">
 <img src="shadow6.gif" width="900" height="500">
+<img src="shadow7.gif" width="900" height="500">
