--- a/index.html
+++ b/index.html
@@ -72,3 +72,4 @@
 <img src="shadow5.gif" width="900" height="500">
 <img src="shadow6.gif" width="900" height="500">
 <img src="shadow7.gif" width="900" height="500">
+<h1>these are so many images all at once!</h1>
