--- a/index.html
+++ b/index.html
@@ -74,3 +74,4 @@
 <img src="shadow7.gif" width="900" height="500">
 <h1>these are so many images all at once!</h1>
 <img src="shadow11.jpg" width="900" height="900">
+<h1>that's the game version of the actors. the game that i play on xbox</h1>
