--- a/index.html
+++ b/index.html
@@ -75,3 +75,4 @@
 <h1>these are so many images all at once!</h1>
 <img src="shadow11.jpg" width="900" height="900">
 <h1>that's the game version of the actors. the game that i play on xbox</h1>
+<img src="shadow8.gif" width="900" height="500">
