yfbqjwjb jcbhsjeghebdhejufgsjfgersyufvdgfhdvyfgstyfgrsygrfgsygr gxyrgfy

--- a/index.html
+++ b/index.html
@@ -77,3 +77,4 @@
 <h1>that's the game version of the actors. the game that i play on xbox</h1>
 <img src="shadow8.gif" width="900" height="500">
 <h1>that's perfect</h1>
+<img src="shadow.gif" width="900" height="500">
