--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <img src="shadow5.jpg"  width="900" height="500">
 <img src="shadow.gif"  width="900" height="500">
 <h1>no this shadow looks the best</h1>
-<h1>like this blog and comment bello if you agree</h1>
+<h1>like this blog and comment "I love shadow" if you agree</h1>
 <h1>🤔hmmmmmmmmmmm i should add more</h1>
 <h1>now that is shadow with electricity and teleportation</h1>
 <img src="shadow6.jpg"  width="900" height="500">
