--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body style="background-color:red;">
 
     <h1> My blog is amazing </h1>
-    <p>Hi, welcome to Eesa's blog🙃</p>
+    <p>Hi, welcome to rahimulhaq.me🙃</p>
 
     <img src="Eesa.png" width="400" height="400">
 
