testing with the code as image in code how you spell it

--- a/index.html
+++ b/index.html
@@ -78,3 +78,4 @@
 <img src="shadow8.gif" width="900" height="500">
 <h1>that's perfect</h1>
 <img src="shadow.gif" width="900" height="500">
+<img src="shadow.mp4" width="900" height="500">
