--- a/index.html
+++ b/index.html
@@ -79,3 +79,4 @@
 <h1>that's perfect</h1>
 <img src="shadow.gif" width="900" height="500">
 <img src="shadow.mp4" width="900" height="500">
+<img src="shadow9.gif" width="900" height="500">
