fixed the bug 'cause it was bugging us. coz thats what bugs do!

--- a/index.html
+++ b/index.html
@@ -82,3 +82,4 @@
 <img src="shadow9.gif" width="900" height="500">
 <h1>this is sonic</h1>
 <img src="sonic.jpg" width="900" height="500">
+<h1>and this is sonics normal form</h1>
