--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <h1>that's perfect</h1>
 <img src="shadow.gif" width="900" height="500">
 <img src="shadow.mp4" width="900" height="500">
-<img src="shadow9.gif" width="900" height="500">
+<img src="sonic.gif" width="900" height="500">
 <h1>this is sonic</h1>
 <img src="sonic.jpg" width="900" height="500">
 <h1>and this is sonics normal form</h1>
