--- a/index.html
+++ b/index.html
@@ -81,5 +81,5 @@
 <img src="shadow.mp4" width="900" height="500">
 <img src="sonic.gif" width="900" height="500">
 <h1>this is sonic</h1>
-<img src="sonic.jpg" width="900" height="500">
+<img src="sonic2.gif" width="900" height="500">
 <h1>and this is sonics normal form</h1>
