--- a/index.html
+++ b/index.html
@@ -83,3 +83,4 @@
 <h1>this is sonic</h1>
 <img src="sonic2.gif" width="900" height="500">
 <h1>and this is sonics normal form</h1>
+<img src="shadow9.gif" width="900" height="500">
