--- a/index.html
+++ b/index.html
@@ -84,3 +84,4 @@
 <img src="sonic2.gif" width="900" height="500">
 <h1>and this is sonics normal form</h1>
 <img src="shadow9.gif" width="900" height="500">
+<img src="shadow.mp4" width="900" height="900">
