--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Shadows blog by Eesa</title>
+    <title>Shadows blog by Eesa / rahimulhaq.me / shadows blog</title>
     <link rel="icon" href="Eesa.png" type="image/icon type">
   </head>
   <body style="background-color:red;">
