--- a/index.html
+++ b/index.html
@@ -85,3 +85,4 @@
 <h1>and this is sonics normal form</h1>
 <img src="shadow9.gif" width="900" height="500">
 <img src="shadow.mp4" width="900" height="500">
+<h1>ok all of this is hard work </h1>
