iiiiii wannnna gyet fuud

--- a/index.html
+++ b/index.html
@@ -86,3 +86,4 @@
 <img src="shadow9.gif" width="900" height="500">
 <img src="shadow.mp4" width="900" height="500">
 <h1>ok all of this is hard work </h1>
+<img src="shadow9.gif" width="900" height="500">
