--- a/index.html
+++ b/index.html
@@ -87,3 +87,4 @@
 <img src="shadow.mp4" width="900" height="500">
 <h1>ok all of this is hard work </h1>
 <img src="shadow9.gif" width="900" height="500">
+<h1>but how does he just take off his rings off of his wrist?</h1>
