--- a/index.html
+++ b/index.html
@@ -88,3 +88,4 @@
 <h1>ok all of this is hard work </h1>
 <img src="shadow9.gif" width="900" height="500">
 <h1>but how does he just take off his rings off of his wrist?</h1>
+<img src="shadow.gif" width="900" height="500">
