--- a/index.html
+++ b/index.html
@@ -89,3 +89,4 @@
 <img src="shadow9.gif" width="900" height="500">
 <h1>but how does he just take off his rings off of his wrist?</h1>
 <img src="shadow.gif" width="900" height="500">
+<h1>lets make this silly</h1>
