--- a/index.html
+++ b/index.html
@@ -91,3 +91,6 @@
 <img src="shadow.gif" width="900" height="500">
 <h1>lets make this silly</h1>
 <img src="EesaColoring.mp4" width="900" height="500">
+<video width="900" height="500" controls>
+  <source src="EesaColoring.mp4" type="video/mp4">
+</video>
