--- a/index.html
+++ b/index.html
@@ -89,8 +89,4 @@
 <img src="shadow9.gif" width="900" height="500">
 <h1>but how does he just take off his rings off of his wrist?</h1>
 <img src="shadow.gif" width="900" height="500">
-<h1>lets make this silly</h1>
-<img src="skibiditoilet.gif" width="900" height="500">
-<video width="900" height="500" controls>
-  <source src="EesaColoring.mp4" type="video/mp4">
-</video>
+<h1>lemme show y'all something</h1>
