--- a/index.html
+++ b/index.html
@@ -94,3 +94,4 @@
   <source src="EesaColoring.mp4" type="video/mp4">
 </video>
 <h1>now that is real art</h1>
+<img src="shadow.mp4" width="900" height="500">
