--- a/index.html
+++ b/index.html
@@ -96,3 +96,4 @@
 <h1>now that is real art</h1>
 <img src="shadow.mp4" width="900" height="500">
 <h1>are you ready to see the logo?</h1>
+<img src="soniclogo.jpg" width="900" height="500">
