--- a/index.html
+++ b/index.html
@@ -97,3 +97,4 @@
 <img src="shadow.mp4" width="900" height="500">
 <h1>are you ready to see the logo?</h1>
 <img src="soniclogo.jpg" width="900" height="500">
+<img src="soniclogo2.jpg" width="900" height="500">
