--- a/index.html
+++ b/index.html
@@ -98,4 +98,4 @@
 <h1>are you ready to see the logo?</h1>
 <img src="soniclogo.jpg" width="900" height="500">
 <img src="soniclogo2.jpg" width="900" height="900">
-<h1>thats na really very cool logo </h1>
+<h1>thats a really very cool logo </h1>
