--- a/index.html
+++ b/index.html
@@ -99,3 +99,4 @@
 <img src="soniclogo.jpg" width="900" height="500">
 <img src="soniclogo2.jpg" width="900" height="900">
 <h1>thats a really very cool logo </h1>
+<h1> i would say the second one looks better but they are both awesome</h1>
